<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Local news scraper</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_article_list">ArticleListActivity</string>
    <string name="title_section1">Search</string>
    <string name="title_section2">Reads</string>
    <string name="title_section3">Likes</string>
    <string name="title_section4">Favourites</string>
    <string name="title_section5">Saves</string>
    <string name="title_section6">Shares</string>
    <string name="title_section7">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">refresh</string>
    <string name="action_reset_user">reset user preferences</string>
    <string name="action_articles">Articles</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_like">like</string>
    <string name="action_share">share</string>
    <string name="action_save">save</string>
    <string name="action_favourite">favourite</string>
    <string name="added_action">article added to %s</string>
    <string name="share_with">Share article on</string>
    <string name="empty_list">Loading....</string>
    <string name="title_activity_registration">Registration</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone number</string>
    <string name="username">Username</string>
    <string name="tagline">News relevant to you</string>
    <string name="tagline_register">Register easily to get started</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="verificationMessage">This is just a message to verify your phonenumber for the News Scrapper application.</string>
    <string name="action_import">Import existing account</string>
    <string name="loading">Loading....</string>
    <string name="logo">logo</string>
    <string name="country_code">Country</string>
    <string name="title_activity_test_db">TestDBActivity</string>
    <string name="likes">Likes:</string>
    <string name="favourites">Favourites:</string>
    <string name="saves">Saves:</string>
    <string name="reads">Reads:</string>
    <string name="load_more">load more</string>
    <string name="email">Email</string>

</resources>
