<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.thesis.ashline.localnewsscraper.view.ArticleActivity">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="110"
        android:title="@string/action_share"
        app:showAsAction="ifRoom|withText"
        app:actionProviderClass=
            "android.support.v7.widget.ShareActionProvider" />
    <group
        android:id="@+id/action_group"
        android:checkableBehavior="all">
        <item
            android:id="@+id/action_save"
            android:orderInCategory="100"
            android:title="@string/action_save"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_like"
            android:orderInCategory="100"
            android:title="@string/action_like"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_favourite"
            android:orderInCategory="100"
            android:title="@string/action_favourite"
            app:showAsAction="never" />
    </group>
</menu>
